# bitlib

./: CMakeLists.txt  README.md
src/: morton.h  popcount.h  shift.h
tests/: common.h  main.c  popcount.c  shift.c
